; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_obs_output_get_mixer.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_obs_output_get_mixer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"obs_output_get_mixer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @obs_output_get_mixer(i32* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @obs_output_valid(i32* %4, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i64 0, i64* %2, align 8
  br label %11

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @get_first_mixer(i32* %9)
  store i64 %10, i64* %2, align 8
  br label %11

11:                                               ; preds = %8, %7
  %12 = load i64, i64* %2, align 8
  ret i64 %12
}

declare dso_local i32 @obs_output_valid(i32*, i8*) #1

declare dso_local i64 @get_first_mixer(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
